--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Get runner IP address
-      run: curl -s https://api.ipify.org > runner-ip.txt
+      run: |
+        curl -s https://api.ipify.org > runner-ip.txt
     - name: Upload runner IP address
       uses: actions/upload-artifact@v3
       with:
@@ -37,8 +38,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm install # This should work without a lock file
+        cache: 'npm' # This can be omitted if you do not have a lock file
+    - run: npm install # Use `npm ci` if you have a lock file
     - run: npm run build --if-present
 
   # Deploy Job
