--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ on:
     branches: [ master ]
 
 jobs:
-  # Checkout Job
   checkout:
     runs-on: ubuntu-latest
     steps:
@@ -22,7 +21,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-  # Build Job
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -38,11 +36,12 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm' # This can be omitted if you do not have a lock file
-    - run: npm install # Use `npm ci` if you have a lock file
-    - run: npm run build --if-present
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm install # Ensure package-lock.json is in the root of the repository
+    - name: Build project
+      run: npm run build --if-present
 
-  # Deploy Job
   deploy:
     runs-on: ubuntu-latest
     needs: build
