--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
+  # Checkout Job
   checkout:
     runs-on: ubuntu-latest
     steps:
@@ -21,6 +22,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+  # Build Job
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -36,12 +38,13 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'npm' # This caches npm modules, but can be omitted if no lock file is present
     - name: Install dependencies
-      run: npm install # Ensure package-lock.json is in the root of the repository
+      run: npm install # Use `npm ci` if you have a package-lock.json
     - name: Build project
       run: npm run build --if-present
 
+  # Deploy Job
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -51,4 +54,4 @@ jobs:
       with:
         name: runner-ip
     - name: Deploy Application
-      run: npm start
+      run: npm run build
