--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
         path: runner-ip.txt
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        path: nodejs-app # Specify the path where the code should be checked out
 
   # Build Job
   build:
@@ -39,9 +41,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
-      run: npm install # Use `npm ci` if you have a package-lock.json
+      run: |
+        cd nodejs-app  # Change directory to where package.json is located
+        npm install # Use `npm ci` if you have a package-lock.json
     - name: Build project
-      run: npm run build --if-present
+      run: |
+        cd nodejs-app  # Change directory to where package.json is located
+        npm run build --if-present
 
   # Deploy Job
   deploy:
@@ -53,4 +59,6 @@ jobs:
       with:
         name: runner-ip
     - name: Deploy Application
-      run: npm start
+      run: |
+        cd nodejs-app  # Change directory to where package.json is located
+        npm start
