--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,49 +11,28 @@ jobs:
   checkout:
     runs-on: ubuntu-latest
     steps:
-    - name: Get runner IP address
-      run: |
-        curl -s https://api.ipify.org > runner-ip.txt
-    - name: Upload runner IP address
-      uses: actions/upload-artifact@v3
-      with:
-        name: runner-ip
-        path: runner-ip.txt
     - name: Checkout code
       uses: actions/checkout@v4
+
+    - name: List directory contents
+      run: |
+        echo "Current directory:"
+        pwd
+        echo "Contents:"
+        ls -R
 
   # Build Job
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [19.9.0]
     needs: checkout
     steps:
-    - name: Download runner IP address
-      uses: actions/download-artifact@v3
-      with:
-        name: runner-ip
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '19.9.0'
     - name: Install dependencies
       run: |
-        npm install # Use `npm ci` if you have a package-lock.json
+        npm install
     - name: Build project
       run: |
         npm run build --if-present
-
-  # Deploy Job
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Download runner IP address
-      uses: actions/download-artifact@v3
-      with:
-        name: runner-ip
-    - name: Deploy Application
-      run: |
-        npm start
