--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,24 @@
-name: Node.js CI
+name: Build, Test, and Deploy with Docker
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - main
 
 jobs:
-  # Checkout Job
-  checkout:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: List directory contents
-      run: |
-        echo "Current directory:"
-        pwd
-        echo "Contents:"
-        ls -R
-
-  # Build Job
   build:
-    runs-on: ubuntu-latest
-    needs: checkout
+    runs-on: self-hosted
     steps:
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '19.9.0'
-    - name: Change to app directory
-      run: cd nodejs-app
-    - name: Install dependencies
-      run: |
-        cd nodejs-app
-        npm install
-    - name: Build project
-      run: |
-        cd nodejs-app
-        npm run build --if-present
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: deploy
+        run: npm start 
