--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest # Change to the GitHub-hosted runner of your choice
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -20,5 +21,5 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: deploy
-        run: npm start 
+      - name: Deploy
+        run: npm start
